# intend

./: .gitignore  CHANGELOG.md  Doxyfile  Makefile.am  Makefile.in  README.md  TODO.md  config.guess  config.h.in  config.sub  configure  configure.in  ylwrap
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in  intend.1.in
doc/syntax/: Makefile.am  Makefile.in  ic.xml
doc/user/: Makefile.in  manual.asc  transform.in
examples/: c.ic  cat.ic  classtest.ic  daemon.ic  dc.ic  ffi_pcre.ic  fork.ic  fork2.ic  guess.ic  markov.ic  math.ic  memtest.ic  pipe.ic  redirect.ic  rfile.ic  safe.ic  shell.ic  signal.ic  strfreq.ic  system.ic  test.ic
examples/brainfk/: bf.ic
examples/games/: 23match.ic
examples/netbsd/: cgrep.ic  grep.ic  libcurses.ic  liblist.ic  libregex.ic  libstat.ic  snow.ic  stat.ic
libintend/: Makefile.am  Makefile.in  intend.c  intend.h
libintend/libeval/: Makefile.am  Makefile.in  eval.h  eval_assign.c  eval_bitwise.c  eval_bool.c  eval_call.c  eval_cast.c  eval_const.c  eval_expr.c  eval_infix.c  eval_math.c  eval_method.c  eval_order.c  eval_postfix.c  eval_prefix.c  eval_ref.c  eval_stmt.c  eval_string.c  eval_switch.c
libintend/libmisc/: Makefile.am  Makefile.in  misc.h  misc_error.c  misc_state.c  misc_util.c
libintend/libparser/: Makefile.am  Makefile.in  expr_dump.c  expr_memory.c  expr_parse.c  expr_stack.c  icl_grammar.y  icl_lexer.l  parser.c  parser.h  stmt_dump.c  stmt_list.c  stmt_memory.c  stmt_parse.c  stmt_stack.c
libintend/libruntime/: Makefile.am  Makefile.in  call_check.c  call_func.c  call_sig.c  except.c  module.c  path.c  register.c  runtime.h  safe.c  sandbox.c  stream.c  symtab_entry.c  symtab_memory.c  symtab_stack.c  system.c  value_array.c  value_cast.c  value_cons.c  value_copy.c  value_dump.c  value_memory.c  value_struct.c
libintend/libstdlib/: Makefile.am  Makefile.in  array.c  array.h  env.c  env.h  function.c  function.h  locale.c  locale.h  modules.c  modules.h  random.c  random.h  runtime.c  runtime.h  stdlib.c  stdlib.h  string.c  string.h  struct.c  struct.h  time.c  time.h
modules/: Makefile.am  Makefile.in
modules/console/: Makefile.am  Makefile.in  intend_console.c  intend_console.h
modules/dyn/: Makefile.am  Makefile.in  intend_dyn.c  intend_dyn.h
modules/err/: Makefile.am  Makefile.in  intend_err.c  intend_err.h
modules/file/: Makefile.am  Makefile.in  intend_file.c  intend_file.h
modules/list/: Makefile.am  Makefile.in  intend_list.c  intend_list.h
modules/math/: Makefile.am  Makefile.in  intend_math.c  intend_math.h
modules/mem/: Makefile.am  Makefile.in  intend_mem.c  intend_mem.h
modules/preg/: Makefile.am  Makefile.in  intend_preg.c  intend_preg.h
modules/shell/: Makefile.am  Makefile.in  intend_shell.c  intend_shell.h
modules/sys/: Makefile.am  Makefile.in  intend_sys.c  intend_sys.h
src/: Makefile.am  Makefile.in  intendcmd.c
templates/: c  l  y
tests/: Makefile.in  call.c  cast.c  eval.c  math.c  symtab.c  userdef.c  value.c
