AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(intend, 1.0.0)

AC_LANG_C
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AM_PROG_LIBTOOL

AC_HEADER_STDC
AC_SEARCH_LIBS(dlopen, dl)
AC_CHECK_FUNCS(dlopen)

AC_OUTPUT(Makefile doc/Makefile doc/man/Makefile doc/man/intend.1 \
	doc/syntax/Makefile doc/user/Makefile doc/user/transform libintend/Makefile \
	libintend/libeval/Makefile libintend/libmisc/Makefile libintend/libparser/Makefile \
	libintend/libruntime/Makefile libintend/libstdlib/Makefile modules/Makefile modules/console/Makefile \
	modules/dyn/Makefile modules/err/Makefile modules/file/Makefile modules/list/Makefile \
	modules/math/Makefile modules/mem/Makefile modules/preg/Makefile modules/shell/Makefile \
	modules/sys/Makefile src/Makefile tests/Makefile)
