INCLUDES = 
METASOURCES = AUTO
noinst_LTLIBRARIES = libeval.la
libeval_la_SOURCES = eval_assign.c eval_bitwise.c eval_bool.c eval_call.c \
	eval_cast.c eval_const.c eval_expr.c eval_infix.c eval_math.c eval_method.c \
	eval_order.c eval_postfix.c eval_prefix.c eval_ref.c eval_stmt.c eval_string.c \
	eval_switch.c
noinst_HEADERS = eval.h
libeval_la_LDFLAGS = -avoid-version
