INCLUDES = 
METASOURCES = AUTO
noinst_HEADERS = runtime.h
noinst_LTLIBRARIES = libruntime.la
libruntime_la_SOURCES = call_check.c call_func.c call_sig.c except.c module.c \
	path.c register.c safe.c sandbox.c stream.c symtab_entry.c symtab_memory.c \
	symtab_stack.c system.c value_array.c value_cast.c value_cons.c value_copy.c \
	value_dump.c value_memory.c value_struct.c
libruntime_la_LDFLAGS = -avoid-version
