INCLUDES = -I$(top_srcdir)/libintend -I$(top_srcdir)/libintend/libeval
METASOURCES = AUTO
lib_LTLIBRARIES = libintend_list.la
libintend_list_la_LDFLAGS = -module -no-undefined -version-info 1:0:0
libintend_list_la_LIBADD = $(top_builddir)/libintend/libintend.la
libintend_list_la_SOURCES = intend_list.c
